<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BarCodeKey</string>

    <!-- Titles -->
    <string name="title_activity_qrresulthandler">ContactsHandler</string>
    <string name="title_activity_main_menu">BarCodeKey</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_qrscanner">QRScanner</string>
    <string name="title_activity_qr">QRActivity</string>


    <!-- Main menu -->
    <string name="button_scan">Scan</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_contact">Show contact</string>
    <string name="qr_code_contentdescription">The QR code is displayed here</string>
    <string name="your_public_key">And your public key!</string>
    <string name="user_has_no_public_key">You don\'t have a public key yet</string>

    <!--QR Activity -->
    <string name="action_show_user">Show your QR</string>
    <string name="has_no_number">No phone number</string>
    <string name="has_no_email">No e-mail address</string>
    <string name="has_public_key">And the public key</string>
    <string name="has_no_public_key">This contact doesn\'t have a public key yet.\nGo ahead and scan it!</string>

    <!-- Settings -->


    <!-- My information -->
    <string name="my_information">My information</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="number">Phone number</string>
    <string name="email">E-mail</string>
    <string name="first_name_hint">George</string>
    <string name="last_name_hint">Clooney</string>
    <string name="number_hint">+358401234567</string>
    <string name="email_hint">george.clooney@hollywood.com</string>
    <string name="first_name_dialog">Enter your first name</string>
    <string name="last_name_dialog">Enter your last name</string>
    <string name="number_dialog">Enter your phone number</string>
    <string name="email_dialog">Enter your email address</string>
    <string name="invalid_input">Your input was invalid</string>

    <!-- Elliptic curves -->
    <string name="elliptic_curves">Choose elliptic curve</string>
    <string name="dialog_elliptic_curve">Curves for keymaking</string>
    <string name="select_curve">Select curve</string>
    <string name="elliptic_curve_summary">Select elliptic curve for keymaking.</string>
    <string name="def_curve">secp224k1</string>


    <!-- Other settings -->
    <string name="other_settings">Other settings</string>
    <string name="reset_keys">Reset keys</string>
    <string name="reset_keys_summary">Here you can reset your key pair</string>
    <string name="reset_keys_note">This will reset your key pair</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_double">Do you really want to reset your key pair</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Help -->
    <string name="help">Help</string>
    <string name="quick_guide_button">Quick guide</string>
    <string name="help_summary">Read the quick user guide</string>
    <string name="quick_guide">Set up your own contact information from the settings menu.\n\n
    BarCodeKey creates a QR code that consists of your information and a public encryption key.\n\n
    Use the "Scan" button to read a QR code from your friend\'s BarCodeKey device.\n\n
    You can reset your encryption keys from the settings by pressing the "Reset keys" button.\n\n
    Reset your encryption keys only when it is absolutely necessary, since the old key you
    might have shared to your friends turns obsolete!</string>
    <string name="encryption_info">Encryption information</string>
    <string name="encryption_info_summary">More information about the encryption method used by the app</string>
    <string name="encryption_info_text">The app creates a symmetric encryption key pair
    using elliptic curve cryptography.\n\n
    The public keys are exchanged between users using the Diffie-Hellman protocol.</string>

    <!-- Temporary -->
    <string name="hello_world">Hello world!</string>
    <string name="whats_on_qr">What\'s on this QR code?</string>

</resources>
